# terraform-grafana-oteldemostack

./: README.md  catalog-info.yaml  main.tf  outputs.tf  provider.tf  pyproject.toml  variables.tf
.github/workflows/: infracost.yaml  reuse-license-check.yaml  terraform.yaml
.reuse/: dep5
